K8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: petclinic
  labels:
    app: petclinic
    env: dev
